--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h1>HELLO!</h1>
-	<div><script src="https://s3-us-west-2.amazonaws.com/bloomerang-qa3-public-cdn/test20200824t135541728z/.widget-js/46080.js" type="text/javascript"></script></div>
+	<div>Put script stuff here</div>
 </body>
 </html>
